# franchise-research-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
reports/: franchise_analysis_report.md
src/crewai_research_assistant/: crew.py  main.py
src/crewai_research_assistant/config/: agents.yaml  tasks.yaml
tests/: 00-problem-statement.txt  01-test-run-research.txt
